remove exe files by gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,5 @@ PerdreraMaster/bin/data/Settings/*.xml
 *.xml
 !PedreraKinectSender/bin/data/openni/config/licenses.xml
 !PedreraKinectSender/bin/data/openni/config/modules.xml
+
+*.exe
