[Kinect win] - added ip send change by XML

--- a/PedreraKinectV2Sender_Win/kinect2HandsSender.vcxproj.filters
+++ b/PedreraKinectV2Sender_Win/kinect2HandsSender.vcxproj.filters
@@ -316,6 +316,21 @@
     <ClCompile Include="..\..\..\addons\ofxSSLManager\src\ofSSLManager.cpp">
       <Filter>addons\ofxSSLManager\src</Filter>
     </ClCompile>
+    <ClCompile Include="src\XBSettingsManager.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\addons\ofxXmlSettings\src\ofxXmlSettings.cpp">
+      <Filter>addons\ofxXmlSettings\src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\addons\ofxXmlSettings\libs\tinyxml.cpp">
+      <Filter>addons\ofxXmlSettings\libs</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\addons\ofxXmlSettings\libs\tinyxmlerror.cpp">
+      <Filter>addons\ofxXmlSettings\libs</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\addons\ofxXmlSettings\libs\tinyxmlparser.cpp">
+      <Filter>addons\ofxXmlSettings\libs</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -491,6 +506,15 @@
     </Filter>
     <Filter Include="addons\ofxTaskQueue\libs\ofxTaskQueue\include\ofx">
       <UniqueIdentifier>{91a837c6-390b-4828-8157-840400d0934c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="addons\ofxXmlSettings">
+      <UniqueIdentifier>{1af2bbbd-cb47-4635-b40f-34773935ed96}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="addons\ofxXmlSettings\src">
+      <UniqueIdentifier>{e6f4bca4-746e-43ab-98c4-b9bf737f1670}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="addons\ofxXmlSettings\libs">
+      <UniqueIdentifier>{e9572f10-66d7-48a7-a9ca-82158349a1d6}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -931,6 +955,15 @@
     </ClInclude>
     <ClInclude Include="..\..\..\addons\ofxTaskQueue\libs\ofxTaskQueue\include\ofx\TaskQueueEvents.h">
       <Filter>addons\ofxTaskQueue\libs\ofxTaskQueue\include\ofx</Filter>
+    </ClInclude>
+    <ClInclude Include="src\XBSettingsManager.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxXmlSettings\src\ofxXmlSettings.h">
+      <Filter>addons\ofxXmlSettings\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxXmlSettings\libs\tinyxml.h">
+      <Filter>addons\ofxXmlSettings\libs</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
