[Kinect Win] - Fixed user detection nearest body and relative hand position

--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,4 @@ PedreraKinectV2Sender_Win/bin/ofxKinectForWindows2Lib.lib
 PedreraKinectV2Sender_Win/kinect2HandsSender.VC.opendb
 PedreraKinectV2Sender_Win/bin/kinect2HandsSender_debug.exp
 PedreraKinectV2Sender_Win/bin/kinect2HandsSender_debug.lib
+PedreraKinectV2Sender_Win/PedreraKinectV2Sender_Win.VC.opendb
